# sages_asciichess

./: .gitignore  CMakeLists.txt  README.md  chessboard.cpp  chessboard.hpp  console_visitor.cpp  console_visitor.hpp  game_rules.cpp  game_rules.hpp  main.cpp  piece.cpp  piece.hpp  position.cpp  position.hpp  settings.hpp
buildc/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
